js_vexflow: addition: Implement

--- a/js_vexflow/index.html
+++ b/js_vexflow/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <title>js vexflow</title>
 
-<div id="container"></div>
+<h1>js vexflow</h1>
 
-<script src="dist/bundle.js"></script>
+<ul>
+  <li><a href="html/hello_world.html">hello world</a></li>
+  <li><a href="html/addition.html">addition</a></li>
+</ul>
