js_vexflow: animation: Implement

--- a/js_vexflow/index.html
+++ b/js_vexflow/index.html
@@ -6,4 +6,5 @@
 <ul>
   <li><a href="html/hello_world.html">hello world</a></li>
   <li><a href="html/addition.html">addition</a></li>
+  <li><a href="html/animation.html">animation</a></li>
 </ul>
