js_vexflow: refactor

--- a/js_vexflow/html/addition.html
+++ b/js_vexflow/html/addition.html
@@ -6,6 +6,6 @@
 
 <div id="container"></div>
 <button type="button" id="add_note">add note</button>
-<button type="button" id="clear_note">clear note</button>
+<button type="button" id="clear_notes">clear notes</button>
 
 <script src="/addition.js"></script>
